--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/pg-adapter": "^1.7.4",
     "@tailwindcss/postcss": "^4.0.0",
     "bcrypt": "^5.1.1",
+    "immer": "^10.1.1",
     "jotai": "^2.12.1",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
