--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcrypt": "^5.1.1",
     "immer": "^10.1.1",
     "jotai": "^2.12.1",
-    "next": "15.1.6",
+    "next": "^15.2.2-canary.2",
     "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.1",
     "postcss": "^8.5.1",
