--- a/package.json
+++ b/package.json
@@ -9,30 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/pg-adapter": "^1.7.4",
-    "@tailwindcss/postcss": "^4.0.0",
+    "@heroui/button": "2.2.17-beta.1",
+    "@heroui/code": "2.2.13-beta.1",
+    "@heroui/input": "2.4.17-beta.1",
+    "@heroui/kbd": "2.2.13-beta.1",
+    "@heroui/link": "2.2.14-beta.1",
+    "@heroui/listbox": "2.3.16-beta.1",
+    "@heroui/navbar": "2.2.15-beta.1",
+    "@heroui/snippet": "2.2.18-beta.1",
+    "@heroui/switch": "2.2.15-beta.1",
+    "@heroui/system": "2.4.13-beta.2",
+    "@heroui/theme": "2.4.13-beta.2",
+    "@auth/pg-adapter": "^1.8.0",
+    "@heroui/react": "^2.7.5",
+    "@tailwindcss/postcss": "^4.0.12",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^12.4.11",
     "immer": "^10.1.1",
-    "jotai": "^2.12.1",
+    "jotai": "^2.12.2",
     "next": "^15.2.2-canary.2",
     "next-auth": "^5.0.0-beta.25",
-    "pg": "^8.13.1",
-    "postcss": "^8.5.1",
+    "pg": "^8.13.3",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-zoom-pan-pinch": "^3.7.0",
-    "swr": "^2.3.0",
-    "tailwindcss": "^4.0.0"
+    "swr": "^2.3.3",
+    "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "prettier": "3.4.2",
+    "eslint-config-next": "15.2.1",
+    "prettier": "3.5.3",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.2"
