Change To ShadcnUI

--- a/package.json
+++ b/package.json
@@ -9,24 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/button": "2.2.17-beta.1",
-    "@heroui/code": "2.2.13-beta.1",
-    "@heroui/input": "2.4.17-beta.1",
-    "@heroui/kbd": "2.2.13-beta.1",
-    "@heroui/link": "2.2.14-beta.1",
-    "@heroui/listbox": "2.3.16-beta.1",
-    "@heroui/navbar": "2.2.15-beta.1",
-    "@heroui/snippet": "2.2.18-beta.1",
-    "@heroui/switch": "2.2.15-beta.1",
-    "@heroui/system": "2.4.13-beta.2",
-    "@heroui/theme": "2.4.13-beta.2",
     "@auth/pg-adapter": "^1.8.0",
-    "@heroui/react": "^2.7.5",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "^4.0.12",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.11",
     "immer": "^10.1.1",
     "jotai": "^2.12.2",
+    "lucide-react": "^0.479.0",
     "next": "^15.2.2-canary.2",
     "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.3",
@@ -35,7 +27,9 @@
     "react-dom": "^19.0.0",
     "react-zoom-pan-pinch": "^3.7.0",
     "swr": "^2.3.3",
-    "tailwindcss": "^4.0.12"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.12",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
