--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
 	"tsx": true,
 	"tailwind": {
 	  "config": "",
-	  "css": "src/styles/globals.css",
+	  "css": "app/globals.css",
 	  "baseColor": "neutral",
 	  "cssVariables": true,
 	  "prefix": ""
@@ -15,7 +15,7 @@
 	  "utils": "@/lib/utils",
 	  "ui": "@/components/ui",
 	  "lib": "@/lib",
-	  "hooks": "@/hooks"
+	  "hooks": "@/methods/hooks"
 	},
 	"iconLibrary": "lucide"
   }
