--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@auth/pg-adapter": "^1.8.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/postcss": "^4.0.12",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
