--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@auth/pg-adapter": "^1.8.0",
     "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/postcss": "^4.0.12",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -20,7 +20,7 @@
     "framer-motion": "^12.4.11",
     "immer": "^10.1.1",
     "jotai": "^2.12.2",
-    "lucide-react": "^0.479.0",
+    "lucide-react": "^0.511.0",
     "next": "^15.2.2-canary.2",
     "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.3",
@@ -29,7 +29,7 @@
     "react-dom": "^19.0.0",
     "react-zoom-pan-pinch": "^3.7.0",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.0.12",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.28"
@@ -45,6 +45,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.2"
   }
 }
