--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/pg-adapter": "^1.8.0",
-    "@radix-ui/react-avatar": "^1.1.3",
+    "@auth/pg-adapter": "^1.9.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@tailwindcss/postcss": "^4.0.12",
-    "bcrypt": "^5.1.1",
+    "@tailwindcss/postcss": "^4.1.7",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.11",
+    "framer-motion": "^12.12.2",
     "immer": "^10.1.1",
-    "jotai": "^2.12.2",
+    "jotai": "^2.12.4",
     "lucide-react": "^0.511.0",
-    "next": "^15.2.2-canary.2",
+    "next": "^15.1.8",
     "next-auth": "^5.0.0-beta.25",
-    "pg": "^8.13.3",
+    "pg": "^8.16.0",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-zoom-pan-pinch": "^3.7.0",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.0.12",
+    "tailwindcss": "^4.1.7",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.28"
   },
@@ -46,6 +46,6 @@
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   }
 }
