--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^3.25.28"
   },
   "devDependencies": {
