--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.12.2",
     "immer": "^10.1.1",
     "jotai": "^2.12.4",
@@ -44,10 +45,12 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "plop": "^4.0.4",
     "prettier": "3.5.3",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "type": "module"
 }
