--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "fast-deep-equal": "^3.1.3",
     "framer-motion": "^12.12.2",
     "immer": "^10.1.1",
     "jotai": "^2.12.4",
