--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "plop": "plop --plopfile plop-generators/plopfile.js",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
