--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,26 +1,29 @@
 {
   "recommendations": [
-    "formulahendry.auto-rename-tag",
-    "codeium.codeium",
-    "naumovs.color-highlight",
-    "dbaeumer.vscode-eslint",
-    "kisstkondoros.vscode-gutter-preview",
-    "wix.vscode-import-cost",
-    "visualstudioexptteam.vscodeintellicode",
-    "visualstudioexptteam.intellicode-api-usage-examples",
-    "ms-vscode.vscode-typescript-next",
-    "xyz.local-history",
-    "devine-davies.make-hidden",
-    "shawspring.next-route-path",
-    "christian-kohler.path-intellisense",
-    "esbenp.prettier-vscode",
-    "yoavbls.pretty-ts-errors",
     "bradlc.vscode-tailwindcss",
+    "christian-kohler.path-intellisense",
+    "clinyong.vscode-css-modules",
+    "codeium.codeium",
+    "dbaeumer.vscode-eslint",
+    "devine-davies.make-hidden",
+    "esbenp.prettier-vscode",
+    "formulahendry.auto-rename-tag",
+    "github.copilot",
+    "github.copilot-chat",
+    "j3lte.folder-customization",
+    "kisstkondoros.vscode-gutter-preview",
     "meganrogge.template-string-converter",
-    "vscode-icons-team.vscode-icons",
-    "mylesmurphy.prettify-ts",
     "mikestead.dotenv",
-    "formulahendry.auto-close-tag",
-    "sburg.vscode-javascript-booster"
+    "ms-vscode.vscode-typescript-next",
+    "mylesmurphy.prettify-ts",
+    "naumovs.color-highlight",
+    "sburg.vscode-javascript-booster",
+    "shawspring.next-route-path",
+    "visualstudioexptteam.intellicode-api-usage-examples",
+    "visualstudioexptteam.vscodeintellicode",
+    "vscode-icons-team.vscode-icons",
+    "wix.vscode-import-cost",
+    "xyz.local-history",
+    "yoavbls.pretty-ts-errors"
   ]
 }
