--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-  "liveServer.settings.donotShowInfoMsg": true,
   "javascript.updateImportsOnFileMove.enabled": "always",
   "editor.renderWhitespace": "none",
   "editor.useTabStops": false,
   "diffEditor.ignoreTrimWhitespace": false,
+  "diffEditor.codeLens": true,
   "editor.insertSpaces": false,
   "emmet.includeLanguages": {
     "ejs": "html"
@@ -29,7 +29,6 @@
 
   "editor.formatOnSave": true,
   "explorer.autoReveal": false,
-  "redhat.telemetry.enabled": true,
   "workbench.iconTheme": "vscode-icons",
   "vsicons.dontShowNewVersionMessage": true,
   "editor.guides.bracketPairs": "active",
@@ -45,7 +44,6 @@
   "prettier.singleAttributePerLine": true,
   "git.openRepositoryInParentFolders": "always",
   "terminal.integrated.env.windows": {},
-  "console-ninja.allowedHosts": ["localhost:3000"],
   "window.commandCenter": true,
   "editor.minimap.enabled": false,
   "importCost.typescriptExtensions": ["\\.tsx?$"],
@@ -58,26 +56,10 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "explorer.sortOrder": "filesFirst",
-  "workbench.settings.applyToAllProfiles": ["prettier.prettierPath"],
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "git.confirmSync": false,
-  "tabnine.experimentalAutoImports": true,
-  "surround.with.arrowFunction": {
-    "label": "arrowFunction",
-    "description": "const $name = ($params) => { ... }",
-    "disabled": false,
-    "snippet": "const ${1:fnName} = (${2:params}) => {\n\t$TM_SELECTED_TEXT\n}$0"
-  },
-  "surround.custom": {
-    "singleQuotes": {
-      "label": "single quotes",
-      "description": "Single Quotes",
-      "snippet": "'$TM_SELECTED_TEXT'"
-    }
-  },
-  "hediet.vscode-drawio.resizeImages": null,
   "git.enableSmartCommit": true,
   "prettier.configPath": ".prettierrc.json",
   "editor.codeActionsOnSave": {
@@ -96,10 +78,7 @@
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "console-ninja.featureSet": "Community",
-  "github.copilot.advanced": {},
   "github.copilot.chat.codesearch.enabled": true,
-  "github.copilot.chat.agent.thinkingTool": true,
   "workbench.editor.enablePreview": false,
   "auto-close-tag.activationOnLanguage": [
     "xml",
@@ -121,16 +100,6 @@
     "HTML (EEx)",
     "HTML (Eex)",
     "plist"
-  ],
-  "folder-color.pathColors": [
-    {
-      "folderPath": "sybath\\methods\\services\\",
-      "color": "foldercolorizer.color_0000cc"
-    },
-    {
-      "folderPath": "sybath\\methods\\services\\attributes\\",
-      "color": "foldercolorizer.color_000066"
-    }
   ],
   "folder-customization.folders": [
     {
