--- a/package.json
+++ b/package.json
@@ -11,41 +11,16 @@
   },
   "dependencies": {
     "@auth/pg-adapter": "^1.11.1",
-    "@radix-ui/react-avatar": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@tailwindcss/postcss": "^4.1.18",
-    "bcrypt": "^6.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
-    "fast-deep-equal": "^3.1.3",
-    "framer-motion": "^12.23.26",
-    "immer": "^11.1.3",
-    "jotai": "^2.16.1",
-    "lucide-react": "^0.562.0",
-    "next": "^16.1.1",
-    "next-auth": "^5.0.0-beta.30",
-    "pg": "^8.16.3",
-    "postcss": "^8.5.6",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-zoom-pan-pinch": "^3.7.0",
-    "swr": "^2.3.8",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
-    "zod": "^4.2.1",
-
+    "@base-ui/react": "1.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "1.1.3",
     "@radix-ui/react-collapsible": "1.1.2",
     "@radix-ui/react-context-menu": "2.2.4",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-hover-card": "1.1.4",
     "@radix-ui/react-label": "2.1.1",
@@ -58,26 +33,50 @@
     "@radix-ui/react-select": "2.1.4",
     "@radix-ui/react-separator": "1.1.1",
     "@radix-ui/react-slider": "1.2.2",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "1.1.2",
-    "@radix-ui/react-toast": "1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@tabler/icons-react": "3.36.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
+    "fast-deep-equal": "^3.1.3",
+    "framer-motion": "^12.23.26",
+    "immer": "^11.1.3",
     "input-otp": "1.4.1",
+    "jotai": "^2.16.1",
+    "lucide-react": "^0.562.0",
+    "next": "^16.1.1",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
+    "postcss": "^8.5.6",
+    "radix-ui": "1.4.3",
+    "react": "^19.2.3",
     "react-day-picker": "9.8.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
+    "react-zoom-pan-pinch": "^3.7.0",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
-    "radix-ui": "1.4.3",
-    "@tabler/icons-react": "3.36.1",
-    "@base-ui/react": "1.0.0"
+    "swr": "^2.3.8",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
