--- a/plop-generators/answerHistory/getMethodFetcher/world_get_known_players_positions_answers.json
+++ b/plop-generators/answerHistory/getMethodFetcher/world_get_known_players_positions_answers.json
@@ -35,7 +35,7 @@
       "name": "other_player_id",
       "camelName": "otherPlayerId",
       "pascalName": "OtherPlayerId",
-      "tsType": "number",
+      "tsType": "string",
       "optional": ""
     },
     {
